anneal/tests/fixtures/is_valid_verification/expected.stderr
  ⚠ This simp argument is unused:
  │   Positive.isValid
  │ 
  │ Hint: Omit it from the simp argument list.
  │   simp ̵[̵P̵o̵s̵i̵t̵i̵v̵e̵.̵i̵s̵V̵a̵l̵i̵d̵]̵
  │ 
  │ Note: This linter can be disabled with `set_option linter.unusedSimpArgs
  │ false`
    ╭─[[PROJECT_ROOT]/src/lib.rs:12:13]
 11 │ ///   unfold make_valid
 12 │ ///   simp [Positive.isValid]
    ·             ────────┬───────
    ·                     ╰── here
 13 │ /// ```
    ╰────

  × Tactic `decide` proved that the proposition
  │   False
  │ is false
    ╭─[[PROJECT_ROOT]/src/lib.rs:23:7]
 22 │ ///   simp [Positive.isValid]
 23 │ ///   decide
    ·       ───┬──
    ·          ╰── here
 24 │ /// ```
    ╰────

  ⚠ This simp argument is unused:
  │   Positive.isValid
  │ 
  │ Hint: Omit it from the simp argument list.
  │   simp ̵[̵P̵o̵s̵i̵t̵i̵v̵e̵.̵i̵s̵V̵a̵l̵i̵d̵]̵
  │ 
  │ Note: This linter can be disabled with `set_option linter.unusedSimpArgs
  │ false`
    ╭─[[PROJECT_ROOT]/src/lib.rs:22:13]
 21 │ ///   unfold make_bad
 22 │ ///   simp [Positive.isValid]
    ·             ────────┬───────
    ·                     ╰── here
 23 │ ///   decide
    ╰────

Error: Lean verification failed. Consider running `cargo anneal generate`, iterating on generated `.lean` files, and copying results back to `.rs` files.
